--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-196.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 26011, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.30MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.38MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-358.2KB/s(Youtube:不良林), server: v2.emovpn.xyz, port: 1253, type: vmess, uuid: 971cef92-ed6a-43c3-9005-8e27c0ea0e73, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v2.emovpn.xyz}}
-  - {name: 🇬🇧 英国-2.75MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
+  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.13MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: 159.223.54.93, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.54.93}}
   - {name: 🇸🇬 新加坡-312.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.08MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.11MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.58MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-196.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-196.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-196.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-196.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-196.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-196.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-196.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
