--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-358.2KB/s(Youtube:不良林), server: v2.emovpn.xyz, port: 1253, type: vmess, uuid: 971cef92-ed6a-43c3-9005-8e27c0ea0e73, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v2.emovpn.xyz}}
-  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.13MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: 159.223.54.93, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.54.93}}
-  - {name: 🇸🇬 新加坡-312.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.43MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-3.08MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.11MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.74MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.58MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.52MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.90MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.90MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-312.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
