--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-1.91MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-160.1KB/s(Youtube:不良林), server: v2.emovpn.xyz, port: 1253, type: vmess, uuid: 971cef92-ed6a-43c3-9005-8e27c0ea0e73, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v2.emovpn.xyz}}
-  - {name: 🇺🇸 美国-6.06MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.14MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.65MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.80MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-379.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-410.5KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.44MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-8.72MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇯🇵 日本-5.58MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.73MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-469.8KB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-334.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 26022, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.18MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.82MB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.44MB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.44MB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.44MB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.44MB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.44MB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.44MB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.44MB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
